--- a/mitel-clubhouse/package.json
+++ b/mitel-clubhouse/package.json
@@ -8,9 +8,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "dotenv": "^8.2.0",
+    "faker": "^5.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "twilio": "^3.57.0",
+    "twilio-cli": "^2.18.0",
     "twilio-video": "^2.8.0",
     "web-vitals": "^1.1.0"
   },
@@ -37,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3030"
 }
