--- a/mitel-clubhouse/package.json
+++ b/mitel-clubhouse/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.1",
     "dotenv": "^8.2.0",
     "faker": "^5.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
