--- a/mitel-clubhouse/package.json
+++ b/mitel-clubhouse/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "twilio": "^3.57.0",
     "twilio-video": "^2.8.0",
     "web-vitals": "^1.1.0"
   },
