--- a/mitel-clubhouse/package.json
+++ b/mitel-clubhouse/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "faker": "^5.4.0",
     "jwt-decode": "^3.1.2",
