--- a/mitel-clubhouse/package.json
+++ b/mitel-clubhouse/package.json
@@ -9,14 +9,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "firebase": "^8.2.10",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "faker": "^5.4.0",
+    "firebase": "^8.2.10",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^3.0.1",
+    "react-image-fade-in": "^1.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "twilio": "^3.57.0",
